# tensor-royale-prover

./: Cargo.toml  LICENSE  README.md  test.json
avail-da/: config.ts  connect.ts  createApp.ts  data-submission.ts  package-lock.json  package.json  queryAppData.ts
prover/: batch_input.json  inš.json  main.cairo  rollup_compile.json
prover/transactions/: data_tx.cairo  problem_tx.cairo  submission_tx.cairo  utils.cairo  verification.cairo  verification_tx.cairo
prover/types/: requests.cairo
prover/verification/: error_rate.cairo  ranking.cairo  results.cairo
solidity_contracts/: .gitignore  TensorRoyale.sol  hardhat.config.ts  package-lock.json  package.json
solidity_contracts/artifacts/contracts/TensorRoyale.sol/: IERC20.json  TensorRoyale.dbg.json  TensorRoyale.json
solidity_contracts/contracts/: TensorRoyale.sol
solidity_contracts/scripts/: deploy.js  registerOnchain.ts
src/: lib.rs  main.rs  main_dep.rs
src/requests/: data_request.rs  mod.rs  problem_request.rs  submission_request.rs  verification_request.rs
src/settlment/: finalize_batch.rs  mod.rs  rank_models.rs
src/trees/: mod.rs  superficial_tree.rs  tree_utils.rs
src/utils/: crypto_uitls.rs  mod.rs  request_types.rs  storage.rs
