[package]
name = "tensor-royale-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
num-traits = "0.2.15"
serde_json = "1.0.48"
parking_lot = "0.12.1"
rayon = "1.6.0"
bincode = "1.3.3"
starknet = { path = "crates/starknet-rs" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
tide = "0.14.0"
async-std = { version = "1.8.0", features = ["attributes"] }